# username-zome

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
example-dna/: Cargo.toml
example-dna/example-dna.dna.workdir/: dna.json
example-dna/tests/: package-lock.json
example-dna/tests/src/: index.ts  profiles.ts  username.ts
example-dna/zomes/profiles/: src
example-dna/zomes/usernames/: Cargo.toml
src/: lib.rs
src/entries/: profile.rs  username.rs
src/entries/profile/: handlers.rs
src/entries/username/: handlers.rs
tests/: package-lock.json  package.json
tests/src/: profiles.ts
zome/: .hc  README.md
zome/tests/: package-lock.json  package.json
zome/tests/src/: index.ts
zome/username.dna.workdir/: dna.json
zome/zomes/username/: Cargo.toml
zome/zomes/username/src/: entries.rs  lib.rs
zome/zomes/username/src/entries/: username.rs
zome/zomes/username/src/entries/username/: handlers.rs
zomes/profiles/: Cargo.toml
zomes/profiles/code/src/: lib.rs
zomes/profiles/code/src/entries/profile/: mod.rs
