[package]
name = "profiles"
version = "0.0.1"
authors = ["mechanicko"]
edition = "2018"

[lib]
name = "profiles"
crate-type = ["cdylib", "rlib"]
path = "./code/src/lib.rs"

[dependencies]
serde = "1.0.104"
hdk3 = { git = "https://github.com/holochain/holochain.git", branch = "develop" }
derive_more = "0.99.9"
chrono = { version = "0.4", features = ['alloc', 'std']}
thiserror = "1.0.20"